--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/2. 数据库管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/2. 数据库管理.md
@@ -116,7 +116,7 @@ b）单击“新增数据库”后的` ••• `选择“显示已删除数据
 
 c）单击图2-11所示的红框，选择“恢复数据库” --> 系统提示“操作成功”。
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-11.png)
+![image](https://user-images.githubusercontent.com/79617492/173724921-be7f8fc7-1bce-412d-be08-af2b73eac47a.png)
 
 ##### 图2-11 恢复数据库
 
@@ -134,31 +134,31 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图2-12所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-12.png)
+![image](https://user-images.githubusercontent.com/79617492/173724941-444956fb-0f5b-487c-960d-d1df34952c57.png)
 
 ##### 图2-12 数据库设计页面
 
 b）选择需要连接的数据库名称，单击如图2-13所示的红框：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-13.png)
+![image](https://user-images.githubusercontent.com/79617492/173724957-a6654e0c-f629-4b73-864d-5a8f880ae942.png)
 
 ##### 图2-13 选择数据库
 
 c）选择“数据库连接”，系统弹出“数据库连接管理”对话框，如图2-14所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-14.png)
+![image](https://user-images.githubusercontent.com/79617492/173724970-b95baf7d-771c-4a41-a9c7-033186f3defe.png)
 
 ##### 图2-14 数据库连接管理
 
 d） 单击“新增”，系统显示“新增数据库连接”页面，如图2-15所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-15.png)
+![image](https://user-images.githubusercontent.com/79617492/173724988-eefb4414-a7f4-4b1b-8935-52db86a2d014.png)
 
 ##### 图2-15 新增数据库连接
 
 d）配置项目数据库的相关信息，如图2-16所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-16.png)
+![image](https://user-images.githubusercontent.com/79617492/173725008-33f809ee-5b8f-4f5e-b3af-695b0ec4bf74.png)
 
 ##### 图2-16 配置数据库信息
 
@@ -174,7 +174,7 @@ e）单击“测试”，测试连接的数据库是否正确。
 
 f）单击“提交”，系统提示“新增成功”信息，如图2-17所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-17.png)
+![image](https://user-images.githubusercontent.com/79617492/173725030-49fba4c8-e201-4bf0-9b5c-7526a4a59b72.png)
 
 ##### 图2-17 新增成功
 
@@ -192,13 +192,13 @@ f）单击“提交”，系统提示“新增成功”信息，如图2-17所示
 
 a）进入平台模块功能页面，选择“数据库设计”功能模块，系统显示“数据库设计”页面，如图2-18所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-18.png)
+![image](https://user-images.githubusercontent.com/79617492/173725058-1ef5178f-2380-434d-bffa-74837cb58830.png)
 
 ##### 图2-18 数据库设计页面
 
 b）选中一个需导出数据库文档的数据库，单击三个点按钮，选择“导出数据库文档”，如图2-19所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/2-19.png)
+![image](https://user-images.githubusercontent.com/79617492/173725077-77addc14-22e2-453d-bc4f-0f9674259c32.png)
 
 ##### 图2-19 选择导出数据库文档
 
