--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/3. 数据库模块管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/3. 数据库模块管理.md
@@ -14,13 +14,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图3-1所示：
 
-![3-1](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173726041-53c273c6-b623-4a67-8acd-4c7a8b17c7d9.png)
 
 ##### 图3-1 数据库设计页面
 
 b）选择需要新增模块组的数据库，单击“+”并选择“新增模块组”，系统弹出“新增项目模块”对话框，输入模块组名称，如图3-2所示：
 
-![3-2](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173726063-f8748716-3813-4eaf-925d-37b576621fab.png)
 
 ##### 图3-2 新增项目数据库模块组
 
@@ -40,19 +40,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图3-3所示：
 
-![3-3](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173726092-dc76f061-5e01-44d6-8c67-e9744dce26cf.png)
 
-##### 图3-1 数据库设计页面
+##### 图3-3 数据库设计页面
 
 b）选择需要修改的数据库的模块组，单击如图3-4所示的红框：
 
-![3-4](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_2_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173726431-bbc9c323-ee7c-4618-9c45-11cdd208d00e.png)
 
 ##### 图3-4 选择数据库的模块组
 
 c）选择“修改模块组”，系统弹出“编辑项目模块”对话框，输入修改的数据库模块组的名称，如图3-5所示：
 
-![3-5](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_2_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173726442-be7e4762-673a-478a-97b7-f2cf40c29f36.png)
 
 ##### 图3-5 修改数据库模块组名称
 
@@ -72,19 +72,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图3-6所示：
 
-![3-6](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173726464-e424b799-58a1-43fe-a13f-ea36220f8095.png)
 
 ##### 图3-6 数据库设计页面
 
 b）选择需要删除的数据库的模块组，单击如图3-7所示的红框：
 
-![3-7](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_2_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173728104-0587b2a7-c204-4147-93bd-a11c9cdc5d7b.png)
 
 ##### 图3-7 选择数据库的模块组
 
 c） 选择“删除模块组”，系统提示“确定删除该模块吗？”，如图3-8所示：
 
-![3-8](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_3_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173728122-74c51f04-3628-4ad1-af9b-e3a1640e69e2.png)
 
 ##### 图3-8 删除模块组
 
@@ -104,13 +104,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图3-9所示：
 
-![3-9](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173728141-75547a45-299f-4020-a602-420d2e04cb9e.png)
 
 ##### 图3-9 数据库设计页面
 
 b）选择需要恢复模块组所在的数据库，单击如图3-10所示的红框：
 
-![3-10](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_4_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173728166-dcb51973-b072-461d-8ae0-dc37b6e58a0a.png)
 
 ##### 图3-10 选择数据库
 
@@ -118,7 +118,7 @@ c）选择“显示已删除数据”。
 
 d）选择需要恢复的模块组，单击如图3-11所示的红框：
 
-![3-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_3_4_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173728199-c5f4a83f-1190-42ee-b078-8173b22e55ef.png)
 
 ##### 图3-11 选择模块组
 
