--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/4. 表管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/4. 表管理.md
@@ -14,21 +14,21 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-1所示：
 
-![4-1](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173728499-4d80f0fc-21d2-4311-a119-eaa321bb71df.png)
 
 ##### 图4-1 数据库设计页面
 
 b）选择需要新增表的模块组，单击“+”并选择“新增表”，如图4-2所示：
 
-![4-2](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173728510-7ca42852-d8d7-43a6-9b2e-895acf761e14.png)
 
 ##### 图4-2 选择模块组
 
 c）系统弹出“新增表”对话框，输入表名称及表注释，如图4-3所示：
 
-![4-3](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_1_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173728524-13832a8f-302d-47fe-8e93-92a8314fcaaf.png)
 
-##### 图4-2 新增表
+##### 图4-3 新增表
 
 d）单击“确定” --> 系统提示“新增成功”。
 
@@ -38,7 +38,7 @@ a）在新增完数据库的表后，您还可以执行以下操作：
 
 双击选择新增的表，系统显示“编辑表信息管理”页面，您可以对新增表的基本、字段、索引以及外键信息进行编辑，如图4-4所示：
 
-![4-4](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_1_05.png)
+![image](https://user-images.githubusercontent.com/79617492/173728538-38f9c444-a995-4145-9b14-5db09fc10266.png)
 
 ##### 图4-4 编辑表信息管理
 
@@ -56,19 +56,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-5所示：
 
-![4-5](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173728556-36d6ed65-0af7-45cc-8959-00313d623b02.png)
 
 ##### 图4-5 数据库设计页面
 
 b）选择需要进行修改的数据表，单击如图4-6所示的红框：
 
-![4-6](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_2_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173728584-2ce451ef-07d9-4d40-9630-59d909203115.png)
 
 ##### 图4-6 选择数据表
 
 c）选择“修改表”，系统显示“编写表信息管理”页面，您可以修改数据表的信息，修改完单击“保存”即可，如图4-7所示：
 
-![4-7](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_2_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173728624-c14dea6c-66c2-4b5e-9a8f-4f01f3ff2327.png)
 
 ##### 图4-7 “编写表信息管理”页面
 
@@ -84,15 +84,15 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 ##### 4.3.1 操作步骤
 
-a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-8所示。
+a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-8所示：
 
-![4-8](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173728658-cd9d5b65-6d29-4db9-a682-7469781f31f1.png)
 
 ##### 图4-8 数据库设计页面
 
 b）选择需要进行复制的数据表，单击如图4-9所示的标号1红框，选择“复制表”：
 
-![4-9](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_3_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173728673-d9452574-e063-4495-b951-fe0eaec903da.png)
 
 ##### 图4-9 复制表
 
@@ -100,13 +100,13 @@ b）选择需要进行复制的数据表，单击如图4-9所示的标号1红框
 
 c）选择需粘贴的数据库模块组，单击如图所示的标号1红框，选择“粘贴表”，如图4-10所示：
 
-![4-10](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_3_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173728691-f35e3bca-3ecb-41fc-a899-ce1e1e8fbb8a.png)
 
 ##### 图4-10 粘贴表
 
 d）这时复制的数据表会在相应的数据库模块组显示，如图4-11所示：
 
-![4-11](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_3_04.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-11.png)
 
 ##### 图4-11 复制后的数据表显示
 
@@ -124,35 +124,35 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-12所示：
 
-![4-12](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-12.png)
 
 ##### 图4-12 数据库设计页面
 
 b）选择需要查看历史版本的数据表，单击如图4-13标号1的红框，并选择“修改日志”：
 
-![4-13](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_02.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-13.png)
 
 ##### 图4-13 选择修改日志
 
 c）系统弹出该数据表的“修改日志列表”页面，单击“打开”，可以看到各个时间的数据表版本，如图4-14所示：
 
-![4-14](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_03.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-14.png)
 
 ##### 图4-14 修改日志列表页面
 
 d）如图4-15所示单击“日志比较”，可以比较任意两个时间的数据表版本：
 
-![4-15](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_04.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-15.png)
 
 ##### 图4-15 选择日志比较
 
 e）选择需比较的两个数据表版本，单击“开始比较”，系统会显示两个数据表版本的不同，如图4-16、4-17所示：
 
-![4-16](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_05.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-16.png)
 
 ##### 图4-16 选择数据表版本
 
-![4-17](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_06.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-17.png)
 
 ##### 图4-17 版本比较
 
@@ -170,13 +170,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-18所示：
 
-![4-18](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_01.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-18.png)
 
 ##### 图4-18 数据库设计页面
 
 b）选择需要删除的数据表，单击如图4-19所示标号1的红框，选择“删除表”：
 
-![4-19](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_5_02.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-19.png)
 
 ##### 图4-19 删除表
 
@@ -196,25 +196,25 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-20所示：
 
-![4-20](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_01.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-20.png)
 
 ##### 图4-20 数据库设计页面
 
 b）选择需要恢复数据表所在的模块组，单击如图4-21所示标号1的红框，选择“显示/隐藏已删除表”：
 
-![4-21](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_6_02.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-21.png)
 
 ##### 图4-21 选择模块组
 
 c）可以看到在该模块组下出现了已经被删除的数据表，单击如图4-22所示的红框，选择“恢复表”：
 
-![4-22](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_6_03.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-22.png)
 
 ##### 图4-22 恢复表
 
 d）如图4-23所示，可以看到已删除的数据表显示正常：
 
-![4-23](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_6_04.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-23.png)
 
 ##### 图4-23 已删除的数据表显示正常
 
@@ -232,36 +232,36 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-24所示：
 
-![4-24](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_01.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-24.png)
 
 ##### 图4-24 数据库设计页面
 
 b）选择需要将数据表逆向解析到的模块组，单击如图4-25所示标号1的红框，选择“逆向解析”：
 
-![4-25](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_02.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-25.png)
 
 ##### 图4-25 选择逆向解析
 
 c）系统弹出“数据库逆向解析”对话框，如图4-26所示，选择需要解析的数据库，单击“下一步”：
 
-![4-26](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_03.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-26.png)
 
 ##### 图4-26 选择数据库
 
 d）系统弹出“当前解析数据库”对话框，如图4-27所示，选择进行解析的数据表，单击“下一步”：
 
-![4-27](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_04.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-27.png)
 
 ##### 图4-27 选择数据表
 
 e）系统弹出“表的字段详情”对话框，如图4-28所示，您可以对数据表字段的导入数据类型进行修改：
 
-![4-28](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_05.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-28.png)
 
 ##### 图4-28 修改导入字段的数据类型
 
 f）修改完成后，单击“逆向解析”，可在模块组下看到逆向解析得到的数据表，如图4-29所示：
 
-![4-29](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_7_06.png)
+![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-29.png)
 
 ##### 图4-29 数据表显示在模块组下
