--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/4. 表管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/4. 表管理.md
@@ -106,7 +106,7 @@ c）选择需粘贴的数据库模块组，单击如图所示的标号1红框，
 
 d）这时复制的数据表会在相应的数据库模块组显示，如图4-11所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-11.png)
+![image](https://user-images.githubusercontent.com/79617492/173728966-5dad0a1d-6bfe-45f0-a089-f15b521934c8.png)
 
 ##### 图4-11 复制后的数据表显示
 
@@ -124,35 +124,35 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-12所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-12.png)
+![image](https://user-images.githubusercontent.com/79617492/173728998-771e71ab-9cb7-47b6-9e00-765dad0b030a.png)
 
 ##### 图4-12 数据库设计页面
 
 b）选择需要查看历史版本的数据表，单击如图4-13标号1的红框，并选择“修改日志”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-13.png)
+![image](https://user-images.githubusercontent.com/79617492/173729031-2ec07e15-6d5e-4207-83bc-9882d27c41aa.png)
 
 ##### 图4-13 选择修改日志
 
 c）系统弹出该数据表的“修改日志列表”页面，单击“打开”，可以看到各个时间的数据表版本，如图4-14所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-14.png)
+![image](https://user-images.githubusercontent.com/79617492/173729060-3e990b79-28da-4c13-a6f1-a0155a5a4a82.png)
 
 ##### 图4-14 修改日志列表页面
 
 d）如图4-15所示单击“日志比较”，可以比较任意两个时间的数据表版本：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-15.png)
+![image](https://user-images.githubusercontent.com/79617492/173729132-14cdcaea-74a0-4db3-85d6-0ccfc7c2cfb6.png)
 
 ##### 图4-15 选择日志比较
 
 e）选择需比较的两个数据表版本，单击“开始比较”，系统会显示两个数据表版本的不同，如图4-16、4-17所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-16.png)
+![image](https://user-images.githubusercontent.com/79617492/173729210-615d5fe9-9d31-4cad-bd32-6c59d60e8b0a.png)
 
 ##### 图4-16 选择数据表版本
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-17.png)
+![image](https://user-images.githubusercontent.com/79617492/173729219-fb1adf0a-295b-47e1-befc-db031d74afeb.png)
 
 ##### 图4-17 版本比较
 
@@ -170,13 +170,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-18所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-18.png)
+![image](https://user-images.githubusercontent.com/79617492/173730450-f35e0f27-b366-4597-8090-ee569d4bb332.png)
 
 ##### 图4-18 数据库设计页面
 
 b）选择需要删除的数据表，单击如图4-19所示标号1的红框，选择“删除表”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-19.png)
+![image](https://user-images.githubusercontent.com/79617492/173730484-12d1069d-9b6d-4cc8-a7b9-b6624f1e84f7.png)
 
 ##### 图4-19 删除表
 
@@ -196,13 +196,13 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-20所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-20.png)
+![image](https://user-images.githubusercontent.com/79617492/173730535-b7363737-905d-423e-bfda-e99692b0e6b1.png)
 
 ##### 图4-20 数据库设计页面
 
 b）选择需要恢复数据表所在的模块组，单击如图4-21所示标号1的红框，选择“显示/隐藏已删除表”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-21.png)
+![image](https://user-images.githubusercontent.com/79617492/173730578-2c63fa91-0d56-4eb4-b9a0-a9610f6ed08f.png)
 
 ##### 图4-21 选择模块组
 
