--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/4. 表管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/4. 表管理.md
@@ -208,13 +208,13 @@ b）选择需要恢复数据表所在的模块组，单击如图4-21所示标号
 
 c）可以看到在该模块组下出现了已经被删除的数据表，单击如图4-22所示的红框，选择“恢复表”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-22.png)
+![image](https://user-images.githubusercontent.com/79617492/173730775-ddfb39fe-efc5-4ddf-8f96-700305c32b99.png)
 
 ##### 图4-22 恢复表
 
 d）如图4-23所示，可以看到已删除的数据表显示正常：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-23.png)
+![image](https://user-images.githubusercontent.com/79617492/173730804-a4976031-ae7a-4159-a22c-2f306673cb33.png)
 
 ##### 图4-23 已删除的数据表显示正常
 
@@ -232,36 +232,36 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图4-24所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-24.png)
+![image](https://user-images.githubusercontent.com/79617492/173730830-20ecd071-e05a-48d7-8662-3b3815bc07ca.png)
 
 ##### 图4-24 数据库设计页面
 
 b）选择需要将数据表逆向解析到的模块组，单击如图4-25所示标号1的红框，选择“逆向解析”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-25.png)
+![image](https://user-images.githubusercontent.com/79617492/173730846-f9f9e776-f7e4-4323-a77b-8df354513b26.png)
 
 ##### 图4-25 选择逆向解析
 
 c）系统弹出“数据库逆向解析”对话框，如图4-26所示，选择需要解析的数据库，单击“下一步”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-26.png)
+![image](https://user-images.githubusercontent.com/79617492/173730869-df7a2ca6-d9dc-454e-a42e-956f7120eeb0.png)
 
 ##### 图4-26 选择数据库
 
 d）系统弹出“当前解析数据库”对话框，如图4-27所示，选择进行解析的数据表，单击“下一步”：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-27.png)
+![image](https://user-images.githubusercontent.com/79617492/173730882-88d62e67-d288-4b82-a066-735f561200d3.png)
 
 ##### 图4-27 选择数据表
 
 e）系统弹出“表的字段详情”对话框，如图4-28所示，您可以对数据表字段的导入数据类型进行修改：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-28.png)
+![image](https://user-images.githubusercontent.com/79617492/173730904-252211c7-ef1c-4275-b871-f3c5fa8bea6e.png)
 
 ##### 图4-28 修改导入字段的数据类型
 
 f）修改完成后，单击“逆向解析”，可在模块组下看到逆向解析得到的数据表，如图4-29所示：
 
-![输入图片说明](../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%9F%BA%E7%A1%80%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/9.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4-29.png)
+![image](https://user-images.githubusercontent.com/79617492/173730921-7fa94022-4d98-4b76-9848-52e891c76016.png)
 
 ##### 图4-29 数据表显示在模块组下
