--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/5. 数据库版本管理.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）基础操作指南/9. 数据库设计/5. 数据库版本管理.md
@@ -14,31 +14,31 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图5-1所示：
 
-![5-1](https://www.feisuanyz.com/fsimage/zc-image/cz_10_1_2_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173731015-afeb2548-7ee7-4faf-a904-f1baac17e9fc.png)
 
 ##### 图5-1 数据库设计页面
 
 b）选择一个数据库，单击如图5-2所示标号1的红框，选择“数据库版本”：
 
-![5-2](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173731038-9baa23af-8aea-44f1-87d0-e48de01e0211.png)
 
 ##### 图5-2 选择数据库版本
 
 c）系统显示“设计版本管理”页面，单击“版本对比”，如图5-3所示：
 
-![5-3](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_1_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173731049-facd26bc-6fb7-4f69-9d00-7d0d203d6004.png)
 
 ##### 图5-3 设计版本管理页面
 
 d）系统显示“版本比较”页面，分别选择“初始版本”和“增量版本”，如图5-4所示：
 
-![5-4](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_1_04.png)
+![image](https://user-images.githubusercontent.com/79617492/173731070-6ccb887a-13f7-45d5-9cc9-ef7ac955c055.png)
 
 ##### 图5-4 版本比较页面
 
 e）单击“比较”，页面下方显示两版本之间的变化信息，如图5-5所示：
 
-![5-5](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_1_05.png)
+![image](https://user-images.githubusercontent.com/79617492/173731110-8e864828-8f17-48fe-84fc-ee9b65130294.png)
 
 ##### 图5-5 版本变化信息
 
@@ -58,19 +58,19 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）选择“项目管理 > 数据库设计”，系统显示“数据库设计”页面，如图5-6所示：
 
-![5-6](https://www.feisuanyz.com/fsimage/zc-image/cz_10_4_4_01.png)
+![image](https://user-images.githubusercontent.com/79617492/173731135-d2ceb915-4a21-4972-8a09-573f80daba13.png)
 
 ##### 图5-6 数据库设计页面
 
 b）选择需要同步的数据库，单击如图5-7所示标号1的红框，选择“数据库版本”：
 
-![5-7](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_1_02.png)
+![image](https://user-images.githubusercontent.com/79617492/173731153-9faa4c6c-2283-4dbb-a352-30c44a0f74bd.png)
 
 ##### 图5-7 选择数据库版本
 
 c）系统显示“设计版本管理”页面，单击“保存新版本”，如图5-8所示：
 
-![5-8](https://www.feisuanyz.com/fsimage/zc-image/cz_10_5_2_03.png)
+![image](https://user-images.githubusercontent.com/79617492/173731170-31959d72-4c08-4ade-ba4e-be2d7fde69d8.png)
 
 ##### 图5-8 设计版本管理页面
 
