--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/4. 如何提交接口版本.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/4. 如何提交接口版本.md
@@ -1,25 +1,25 @@
 ### 10. 常见问题
 
-#### 10.3 如何查看项目的JAR包依赖关系
+#### 10.4 如何提交接口版本
 
-本节主要介绍如何查看项目的根JAR包、项目JAR扩展包、项目公共JAR包依赖关系。
+本节主要介绍如何对已经开发的接口进行提交版本。
 
-##### 10.3.1 操作步骤
+##### 10.4.1 前提条件
 
-a）选择已经创建项目的卡片，进入平台功能模块界面，选择“Jar包依赖图”功能模块，如图3-1所示：
+您已经在全自动开发平台完成接口开发。
 
-![image](https://user-images.githubusercontent.com/79617492/174048934-cad9c2fd-c6db-40f9-b542-f18b948d8751.png)
+##### 10.4.2 操作步骤
 
-##### 图3-1 Jar包依赖图页面
+a）在用于接口开发的窗体视图中完成流程图的绘制之后，单击“保存”，如图4-1所示：
 
-b）在搜索框中输入查询的条件，系统自动加载该项目的JAR依赖包关系，如图3-2所示：
+![image](https://user-images.githubusercontent.com/79617492/174049100-e65c053b-5d9e-46c5-84f2-16db63f4c80a.png)
 
-![image](https://user-images.githubusercontent.com/79617492/174048948-3be52f2f-6944-4d98-9079-69f7dcf2041a.png)
+##### 图4-1 保存开发接口的流程图
 
-##### 图3-2 项目JAR包依赖关系
+b）在上方导航栏，单击“提交版本”选项，系统显示“提交版本”页面，如图4-2所示：
 
-c）在搜索后选择“CLASS”查询条件，输入需要查询的信息，系统自动加载Class依赖的JAR包，如图3-3所示：
+![image](https://user-images.githubusercontent.com/79617492/174049122-0e6e7780-73db-498c-a73c-970675498c0f.png)
 
-![image](https://user-images.githubusercontent.com/79617492/174048963-f6dacbe5-a79a-4813-873b-30cb0572cd14.png)
+##### 图4-2 提交版本页面
 
-##### 图3-3 查看Class依赖的JAR包
+c）输入版本的描述（例如：V1.0），单击“确定”即完成接口版本的提交。
