--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/5. 如何比较接口版本.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/5. 如何比较接口版本.md
@@ -14,18 +14,18 @@ b）已经提交了至少两次的接口开发版本。
 
 a）在窗体视图的工具导航栏，单击“版本比较”选项，如图5-1所示：
 
-![5-1](https://www.feisuanyz.com/fsimage/ks-image/ks_12-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049250-af30f904-d686-4bd1-b6c5-aa74cc7f3a7a.png)
 
 ##### 图5-1 选择版本比较
 
 b）进入流程图版本比较页面，选择基本版本和比较版本，单击“开始比较”，如图5-2所示：
 
-![5-2](https://www.feisuanyz.com/fsimage/ks-image/ks_12-5_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049269-318d3fbe-ca72-47e7-8490-9b9b7776ae65.png)
 
 ##### 图5-2 流程图版本比较页面
 
 c）单击“查看不同”，查看版本修改记录，如图5-3所示：
 
-![5-3](https://www.feisuanyz.com/fsimage/ks-image/ks_12-6_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049301-6479b35b-04c1-43e1-ab52-a73e47eb85eb.png)
 
 ##### 图5-3 查看不同
