--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/6. 如何检出接口版本.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/6. 如何检出接口版本.md
@@ -14,24 +14,24 @@ b）已经提交了至少两次的接口开发版本。
 
 a）在窗体视图的工具导航栏，单击“检出版本”选项，如图6-1所示：
 
-![6-1](https://www.feisuanyz.com/fsimage/ks-image/ks_12-7_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049427-4806ae67-0e6a-48e4-b63b-1c082085d37f.png)
 
 ##### 图6-1 选择检出版本
 
 b）进入历史版本页面，选择需要检出的版本，单击“检出”，如图6-2所示：
 
-![6-2](https://www.feisuanyz.com/fsimage/ks-image/ks_12-8_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049447-9fdd8d39-e59c-446d-a85b-796de4d6960f.png)
 
 ##### 图6-2 历史版本页面
 
 c）系统提示覆盖当前流程模型信息，单击“确定”，如图6-3所示：
 
-![6-3](https://www.feisuanyz.com/fsimage/ks-image/ks_12-9_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049468-13cd655b-abf8-4b07-b841-d6db7af4d6ed.png)
 
 ##### 图6-3 覆盖当前流程模型
 
 d）页面显示该接口检出版本的流程图，如图6-4所示：
 
-![6-4](https://www.feisuanyz.com/fsimage/ks-image/ks_12-10_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049481-55b799a9-dc22-4a24-aa25-5efcc384dfb0.png)
 
 ##### 图6-4 查看接口的检出版本
