--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/7. 如何新增实体模型.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/10. 常见问题/7. 如何新增实体模型.md
@@ -8,13 +8,13 @@
 
 a）在平台功能模块界面，选择“实体模型”功能模块，系统显示实体模型页面，如图7-1所示：
 
-![7-1](https://www.feisuanyz.com/fsimage/ks-image/ks_19-01_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049595-1aeca24d-8a13-41c5-9b20-3254239c0121.png)
 
 ##### 图7-1 实体模型页面
 
 b）单击“新增实体模型模块”，系统显示“新增实体模型模块”页面，如图7-2所示：
 
-![7-2](https://www.feisuanyz.com/fsimage/ks-image/ks_19-02_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049628-128b6377-a6bb-4276-8b9f-7deef471ab89.png)
 
 ##### 图7-2 新增实体模型模块页面
 
@@ -22,13 +22,13 @@ c） 输入模块的名称和描述信息，单击“确定”。
 
 d）选中已创建的实体模型模块，单击“+”选择“新增实体模型”，如图7-3所示：
 
-![7-3](https://www.feisuanyz.com/fsimage/ks-image/ks_19-03_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049644-c633b582-976c-4e6c-b81d-795c8aca356c.png)
 
 ##### 图7-3 新增实体模型页面
 
 e）系统显示新增实体模型页面，输入实体模型的名称和描述，单击“新增”，根据实际需求添加实体模型字段，如图7-4所示：
 
-![7-4](https://www.feisuanyz.com/fsimage/ks-image/ks_19-04_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174049665-0fe5775f-c7e1-4203-baff-dff955aa376b.png)
 
 ##### 图7-4 添加实体模型字段
 
