--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/2. 创建项目/2. 如何加载资源.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/2. 创建项目/2. 如何加载资源.md
@@ -10,18 +10,18 @@
 
 a）单击已创建项目的项目卡片上的设置按钮，选择“加载项”，如图2-1所示：
 
-![2-1](https://www.feisuanyz.com/fsimage/ks-image/ver01/2-2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/174050341-d45706c8-7448-4157-823d-cf6b61f841e7.png)
 
 ##### 图2-1 选择加载项
 
 b）系统显示项目加载项页面，单击“资源”页签，如图2-2所示：
 
-![2-2](https://www.feisuanyz.com/fsimage/ks-image/ver01/2-2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/174050362-263f942c-a106-4d1c-9463-1233f260b74e.png)
 
 ##### 图2-2 项目加载项页面
 
 c）选择“资源”页签中需要添加的资源，单击“添加”按钮，所需资源添加完成后，单击“加载应用”即可，如图2-3所示：
 
-![2-3](https://www.feisuanyz.com/fsimage/ks-image/ver01/2-2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/174050380-fb002059-b9d4-40fb-91d0-0f50f1e80306.png)
 
 ##### 图2-3 添加资源
