--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/5. 新增SQL/2. 如何自动生成SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/5. 新增SQL/2. 如何自动生成SQL信息.md
@@ -14,25 +14,25 @@ b）您已经成功连接中间件资源。
 
 a）在平台功能模块界面中，选择“接口生成器”功能模块，系统显示“接口生成器”页面，如图2-1所示：
 
-![2-1](https://www.feisuanyz.com/fsimage/ks-image/ks_13-00_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174554644-94bf2217-281b-4e79-88f4-04c40b6b3bb5.png)
 
 ##### 图2-1 选择接口生成器
 
 b）选中数据库，如图2-2所示，单击“下一步”：
 
-![2-2](https://www.feisuanyz.com/fsimage/ks-image/ks_13-01_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174554672-9db65e30-fcaa-46a9-b935-4f58a0e36c86.png)
 
 ##### 图2-2 选择数据库
 
 c）勾选需要生成的SQL信息的表，如图2-3所示，单击“下一步”：
 
-![2-3](https://www.feisuanyz.com/fsimage/ks-image/ks_13-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174554716-64e6b092-9bab-4744-a10c-10e44bd6043a.png)
 
 ##### 图2-3 选择数据库表
 
 d）勾选生成的SQL信息类型，选择SQL组和SQL模块，如图2-4所示：
 
-![2-4](https://www.feisuanyz.com/fsimage/ks-image/ks_13-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174554734-4ca9dd5b-2bb2-4a4b-be58-958d7c846763.png)
 
 ##### 图2-4 选择SQL类型
 
@@ -40,6 +40,6 @@ e）单击“生成接口”，系统提示操作成功。
 
 f）选择“SQL管理”功能模块，进入对应的SQL组和SQL模块查看SQL信息，如图2-5所示：
 
-![2-5](https://www.feisuanyz.com/fsimage/ks-image/ks_13-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174554746-1809d45b-b86c-45aa-8737-aa567f3bac72.png)
 
 ##### 图2-5 SQL信息自动生成
