--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/8. 项目发版/1. 如何对项目发版.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）快速入门教程/SoFlu快速入门教程（2022-详细版）/8. 项目发版/1. 如何对项目发版.md
@@ -8,13 +8,13 @@
 
 a）选择已创建项目的卡片，单击设置按钮，选择“发版”，如图1-1所示：
 
-![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_3-1_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174772483-4125d2ec-17b7-494a-9bdf-f1647f558bdc.png)
 
 ##### 图1-1 选择发版
 
 b）进入项目发版页面，输入项目发版的标签和描述，如图1-2所示：
 
-![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_3-2_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174772505-232a22db-de8d-4a2f-a9bb-ee849e9c91c0.png)
 
 ##### 图1-2 项目发版页面
 
@@ -22,12 +22,12 @@ c）单击“确定”，系统提示“正在生成项目数据包，请于2分
 
 d）稍等片刻后，再次单击项目卡片上的设置按钮，选择“发版记录”，如图1-3所示：
 
-![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_3-3_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174772523-cdfc8e1b-5b8d-4415-8425-faf2cb8857a9.png)
 
 ##### 图1-3 选择发版记录
 
 e）进入发版记录页面，查看项目发版记录的信息，说明项目发版成功，如图1-4所示：
 
-![1-4](https://www.feisuanyz.com/fsimage/ks-image/ks_3-4_img.png)
+![image](https://user-images.githubusercontent.com/79617492/174772556-f59d0aaf-1492-4e59-a317-d4fbbe0fa43e.png)
 
 ##### 图1-4 发版记录页面
