--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -10,7 +10,7 @@
 
 在全自动开发平台测试用例页面上传需要转换的文本文件，本实例以aa.txt文件为例，如图2-1、2-2所示，执行测试用例并通过测试用例执行结果是否成功以及服务器地址上是否上传了对应HTML文件、HTML文件效果是否正确来判断功能实现结果，如图2-3、2-4所示：
 
-![2-1](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_1.png)
+![image](https://user-images.githubusercontent.com/79617492/175509318-4a00a106-aac5-4f7e-b146-eb76c555123b.png)
 
 ##### 图2-1 全自动开发平台参数录入界面
 
