--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -14,11 +14,11 @@
 
 ##### 图2-1 全自动开发平台参数录入界面
 
-![2-2](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_2.png)
+![image](https://user-images.githubusercontent.com/79617492/175855091-78a5f2b4-a471-4223-b9cd-b1205f9236f6.png)
 
 ##### 图2-2 文本文件
 
-![2-3](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_3.png)
+![image](https://user-images.githubusercontent.com/79617492/175855104-33f931bb-18a0-4c15-b477-5208cc40b75a.png)
 
 ##### 图2-3 测试用例执行结果
 
