--- a/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
+++ b/SoFlu（后端）全自动开发平台教程/SoFlu（后端）案例场景/2. 常见案例/2. 电商平台应用/1. 商品详情文本转HTML.md
@@ -22,7 +22,7 @@
 
 ##### 图2-3 测试用例执行结果
 
-![2-4](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/2_4.png)
+![image](https://user-images.githubusercontent.com/79617492/176087573-4468facb-80d8-4faa-830e-9181f1033e57.png)
 
 ##### 图2-4 HTML文件展示结果
 
@@ -30,13 +30,13 @@
 
 a）提前安装好如图2-5所示的Xshell软件，案例执行后会生成对应HTML文件上传到配置的服务器地址上，使用Xshell登录配置的服务器地址，进入接口返回的文件路径即可查看生成的HTML文件：
 
-![2-5](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/3_1.png)
+![image](https://user-images.githubusercontent.com/79617492/176087589-9eb30001-120e-49d6-9a73-39b9b6bef632.png)
 
 ##### 图2-5 Xshell软件
 
 b）提前准备一份文本文件：aa.txt（用于存储需转换的商品详情信息），如图2-6所示：
 
-![2-6](https://www.feisuanyz.com/fsimage/alcj-image/tohtml/3_2.png)
+![image](https://user-images.githubusercontent.com/79617492/176087606-31fa9bfe-300d-4cb5-8260-b92fe3238b30.png)
 
 ##### 图2-6 文本文件
 
